@@ -13,24 +13,24 @@
  *   along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-/**
+/*
  * URLToStringTest.java
- * Copyright (C) 2011-2014 University of Waikato, Hamilton, New Zealand
+ * Copyright (C) 2011-2024 University of Waikato, Hamilton, New Zealand
  */
 
 package adams.data.conversion;
 
-import java.net.URL;
-
+import adams.env.Environment;
 import junit.framework.Test;
 import junit.framework.TestSuite;
-import adams.env.Environment;
+
+import java.net.URI;
+import java.net.URL;
 
 /**
  * Tests the URLToString conversion.
  *
  * @author  fracpete (fracpete at waikato dot ac dot nz)
- * @version $Revision$
  */
 public class URLToStringTest
   extends AbstractConversionTestCase {
@@ -53,9 +53,9 @@ public class URLToStringTest
   protected Object[] getRegressionInput() {
     try {
       return new URL[]{
-	  new URL("http://www.waikato.ac.nz/"),
-	  new URL("https://www.gmail.com/"),
-	  new URL("ftp://ftp.suse.com/")
+	  new URI("http://www.waikato.ac.nz/").toURL(),
+	  new URI("https://www.gmail.com/").toURL(),
+	  new URI("ftp://ftp.suse.com/").toURL()
       };
     }
     catch (Exception e) {
